# gbm_bench

./: .gitignore  .preprocess.py.swp  .rhuh_gbm_parser.py.swp  README.md  preprocess.py  pyproject.toml  rhuh_gbm_parser.py  setup.txt  visualize_exam_rhuh.py  visualize_lmi_rhuh.py
gbm_bench/evaluation/: evaluate.py
gbm_bench/preprocessing/: brainles_preprocessing.py  dicom_to_nifti.py  norm_ss_coregistration.py  preprocess.py  tissue_segmentation.py  tumor_segmentation.py
gbm_bench/utils/: metrics.py  parsing.py  rhuh_gbm_parser.py  utils.py  visualization.py  visualize_exam_rhuh.py  visualize_lmi_rhuh.py  visualize_rhuh.py
preprocessing/: .tissue_segmentation.py.swp  dicom_to_nifti.py  tissue_segmentation.py  tumor_segmentation.py
scripts/: evaluate_rhuh.py  preprocess_rhuh.py  test_preop.py  visualize_rhuh.py
utils/: rhuh_gbm_parser.py  visualize_exam.py  visualize_exam_rhuh.py  visualize_preprocessing.py
