[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm_bench"
version = "0.0.1"
description = "A library providing Python implementations for standardized preprocessing of brain MRI and benchmarking of glioblastoma models via radiation plans."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lucas Zimmer", email = "zimmer.lucas.w@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/LMZimmer/GBM_bench"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

cmake.args = []

wheel.packages = ["ants"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"
