[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm_bench"
version = "0.0.1"
description = "A library providing Python implementations for standardized preprocessing of brain MRI and benchmarking of glioblastoma models via radiation plans."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lucas Zimmer", email = "zimmer.lucas.w@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/LMZimmer/gbm_bench"
