[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm_bench"
version = "0.1.0"
description = "A library providing Python implementations for standardized preprocessing of brain MRI and benchmarking of glioblastoma models via radiation plans."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lucas Zimmer", email = "zimmer.lucas.w@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test_data", "scripts"]

[project.urls]
Homepage = "https://github.com/LMZimmer/gbm_bench"
